fixed visual glitch on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   background-color: var(--bs-body-bg);
+  overflow-x: hidden;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -10879,6 +10880,7 @@ html {
 
 .white-bg-pattern{
   background-image: url(../assets/img/bgPatternWhite.png);
+
 }
 .page-section {
   padding: 6rem 0;
